fixed spacing/padding issues in some places

--- a/main.css
+++ b/main.css
@@ -55,8 +55,8 @@ section {
   --prim-blue-bg: rgba(4, 9, 22, 0.824);
   --white: rgb(172, 208, 231);
   --light-blue: #a1cbf6;
-  --nav-bg: #011a329c;
-  --nav-hov-clr: #0981f93e;
+  --nav-bg: #0338799c;
+  --nav-hov-clr: #0981f99c;
 }
 
 ::selection {
@@ -78,7 +78,7 @@ body {
   background-size: cover;
   background-blend-mode: color-dodge;
   background-attachment: fixed;
-  background-color: rgba(4, 4, 30, 0.81);
+  background-color: rgba(4, 25, 50, 0.874);
 }
 
 #header {
@@ -97,19 +97,21 @@ nav {
   place-self: center;
   height: auto;
   width: fit-content;
-  top: 0;
-  background-color: var(--nav-bg);
-  backdrop-filter: blur(15px);
-  padding: 0.5em 0;
-  margin-bottom: 0.5rem;
-  border-radius: 1.5rem;
+  top: 1rem;
 }
 
 .nav-links {
   display: flex;
+  gap: .2rem;
   justify-content: center;
   align-items: center;
-  gap: 0.2em;
+  border: 1px solid rgba(22, 120, 249, 0.231);
+  background-color: var(--nav-bg);
+  backdrop-filter: blur(15px);
+  box-shadow: 0px 10px 27px 0px rgba(0, 37, 74, 0.573);
+  padding: .5em ;
+  margin: 1em 0;
+  border-radius: 1.5rem;
   font-weight: 600;
 }
 
@@ -118,11 +120,10 @@ nav {
   text-align: center;
   align-content: center;
   color: var(--light-blue);
-  padding: 0.3em 0.8em;
+  padding: 0.2em 0.8em;
   border-radius: 1.5rem;
-  font-weight: 300;
- 
-  font-size: clamp(1rem, 0.75rem + 1vw, 1.2rem);
+  font-weight: 400;
+  font-size: clamp(.5rem, 0.75rem + 1vw, 1.2rem);
 }
 
 .nav-links a:hover {
@@ -146,14 +147,14 @@ nav {
 /* HERO SECTION (FIRST PAGE)*/
 
 .get-in-touch {
-  padding: 0.5rem;
+  padding: .5rem;
   position: absolute;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   margin: 1em 0.5em;
-  right: 0;
-  bottom: 0;
-  font-size: 2rem;
+  right: 2%;
+  bottom: 2%;
+  font-size: 1.5rem;
   line-height: 1em;
   border-radius: 50%;
   border: 1px solid #a1ccf62e;
@@ -476,7 +477,7 @@ nav {
   width: fit-content;
   display: flex;
   align-self: left;
-  gap: 1em;
+  gap: .5em;
   line-height: 50px;
 }
 
@@ -488,14 +489,19 @@ nav {
   display: grid;
   place-content: center;
   text-align: center;
-  border-radius: 50%;
   font-weight: 6m00;
   opacity: 70%;
+  padding: 0 .5rem;
+  width: 100px;
 }
+
 
 .scl-med a:hover {
   opacity: 100%;
 }
+
+
+
 
 /* CONTACT FORM STYLESHEET MOVED AS OF 6.19.25 */
 
@@ -533,21 +539,14 @@ nav {
 
   /* NAV LINKS */
 
-  .nav-links {
-    gap: 0;
-    padding: 0.2em ;
-    border-radius: 1.5rem;
-    border: 1px solid rgba(76, 90, 103, 0.137);
-    background-color: var(--nav-bg);
-    backdrop-filter: blur(12px);
-  }
+
 
   .nav-links a {
-    font-weight: 500;
+    font-weight: 300;
     border-radius: 1.5rem;
     display: block;
     text-align: center;
-    width: 80px;
+   width: 80px;
   }
 
   .nav-links a:hover {
